--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,128 @@
+/* Layout
+-----------------------------------*/
+html, body, #home { /* Para que o "música para todos" fique centralizado em todos os lados
+deixei essas tags com um espaçamento de 100% da janela do browser */
+	height: 100%;
+}
+
 body {
 	background: url(../imagens/capa.png),/* Ambas as imagens capa e ruido têm opacidade */
 				url(../imagens/ruido.png),
 				linear-gradient(50deg,#ff4169,#7c26f8);/* "50dg" são 50 graus */
 				background-attachment: fixed; /*fixa o background*/
+				font-family: Helvetica,Arial,sans-serif;
+}
+
+/* Barra de navegação
+-----------------------------------*/
+nav.navbar-transparente {
+	padding: 15px 0px;
+	background: rgba(0,0,0,0.6);
+}
+
+/* Essas classes abaixo foram copiadas através do
+"inspecionar" do google chrome */
+.navbar-light .navbar-nav .nav-link {
+	color: white;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+	color: #9bf0e1;
+}
+/* Aqui abaixo alterei as cores */
+.navbar-light .navbar-toggler {
+    color: rgba(255,255,255,0.5);
+    border-color: rgba(255,255,255,0.5);
+}
+
+/* Divisor dos menus */
+.divisor {
+	width: 1px;
+	background: white;
+	margin: 12px 15px; /* Essa margem diminuiu o tamanho do divisor */
+}
+
+/* Capa
+-----------------------------------*/
+.capa {
+	text-align: center;
+}
+
+.btn-custom {
+	color: white;
+	border-radius: 500px;
+	-webkit-border-radius: 500px;
+	text-transform: uppercase;
+	transition: background 0.4s, color 0.4s
+	padding: 10px 20px;
+}
+
+.btn-roxo {
+	background: #7c25f8;
+}
+
+.btn-roxo:hover {
+	background: #6207e3;
+	color: white;
+}
+
+.btn-branco {
+	border: 2px solid white;
+}
+
+.btn-branco:hover {
+	background-color: white;
+	color: black;
+}
+
+/* Tipografia
+-----------------------------------*/
+h1 {
+	font-size: 900;
+	letter-spacing: -0.05em; /* Define o espaçamento horizontal entre as letras */
+	margin-bottom: 50px;
+	color: white;
+}
+
+/* Link de mediaqueries: https://getbootstrap.com.br/docs/4.1/layout/overview/ */
+/* Link para conversor de pixels em "em": https://www.w3schools.com/tags/ref_pxtoemconversion.asp */
+
+/* Dispositivos extra small (telefones em modo retrato, com menos de 576px)*/
+@media (max-width: 575.98px) {
+	.btn-custom {
+		margin: 10px 15px;
+	}
+}
+
+/* Dispositivos small (telefones em modo paisagem, com 576px ou mais)*/
+@media (min-width: 576px) and (max-width: 767.98px) {
+	h1 {
+		font-size: 3em;
+	}
+	.btn-custom {
+		margin: 10px 15px;
+	}
+}
+
+
+/* Dispositivos médios (tablets com 768px ou mais)*/
+@media (min-width: 768px) and (max-width: 991.98px) {
+	h1 {
+		font-size: 4em;
+	}
+}
+
+/* Dispositivos large (desktops com 992px ou mais)*/
+@media (min-width: 992px) and (max-width: 1199.98px) {
+	h1 {
+		font-size: 5em;
+	}
+}
+
+
+/* Dispositivos extra large (desktops grandes com 1200px ou mais)*/
+@media (min-width: 1200px) {
+	h1 {
+		font-size: 6em;
+	}
 }
