Conclusão da 2ª secção de conteúdos

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,6 +3,8 @@
 html, body, #home { /* Para que o "música para todos" fique centralizado em todos os lados
 deixei essas tags com um espaçamento de 100% da janela do browser */
 	height: 100%;
+	overflow-x: hidden; /* Esconde a barra de navegação horizontal que surgiu
+	devido as imagens dos IPhones que excediam a largura da página */
 }
 
 body {
@@ -77,18 +79,40 @@ nav.navbar-transparente {
 
 /* Estrutura conteúdos
 -----------------------------------*/
-#servicos {
-	background: white;
+.caixa {
 	padding-top: 20px;
 	padding-bottom: 20px;
+}
+
+#servicos {
+	background: white;
+}
+
+#recursos {
+	color: white;
 }
 
 #servicos h2, h3 {
 	color: #7c25f8;
 }
 
+#recursos h2 {
+	color: white;
+}
+
+#recursos h3 {
+	color: #9bf0e1;
+}
+
 .albuns {
 	padding: 10px 0px;
+}
+
+.rotacionar {
+	-ms-transform: rotate(30deg); /* IE 9 */
+	-webkit-transform: rotate(30deg); /* Chrome, Safari, Opera */
+	transform: rotate(30deg);
+	padding-left: 80px;
 }
 
 /* Tipografia
