--- a/css/estilo.css
+++ b/css/estilo.css
@@ -115,6 +115,39 @@ nav.navbar-transparente {
 	padding-left: 80px;
 }
 
+/* Rodapé
+-----------------------------------*/
+footer {
+	background: #000;
+	padding: 50px 0px 20px 0px;
+	position: relative; /*sobrepõe o meu footer a imagem dos IPhones */ 
+}
+
+footer h4 {
+	color: #919496;
+	font-size: 0.8em;
+	text-transform: uppercase;
+}
+
+footer .navbar-nav a {
+	color: white;
+	font-size: 0.8em;
+}
+
+footer .navbar-nav a:hover {
+	color: #9bf0e1;
+	text-decoration: none;
+}
+
+footer ul {
+	list-style: none;
+}
+
+footer ul li {
+	float: right;
+	margin: 0 5px
+}
+
 /* Tipografia
 -----------------------------------*/
 h1 {
@@ -131,7 +164,6 @@ h2 {
 }
 
 h3 {
-	font-size: 3em;
 	font-weight: 700;
 	letter-spacing: -0-04em;
 }
@@ -143,6 +175,15 @@ h3 {
 @media (max-width: 575.98px) {
 	.btn-custom {
 		margin: 10px 15px;
+		font-size: 1em;
+	}
+
+	.btn-branco { /* Aqui EU melhorei o espaçamento do botão branco */
+		margin: 10px 7px;
+	}
+
+	footer h4 { /* Aqui EU melhorei o espaçamento entre os títulos do footer */
+		margin: 15px 0px;
 	}
 }
 
